# AutoWpp

./: ARCHITECTURE.md  CMakeLists.txt  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  package.xml  plugin_description.xml  temp.txt
config/: filedialog.yaml  process.yaml  resources.yaml
include/waypoints_path_planner/: navigator_interactive_waypoint.h  status_monitoring_panel.h  visualization_manager.h  waypoints_path_planner.h  waypoints_path_planner_panel_management.h
launch/: waypoints_path_planner.launch  waypoints_path_planner_params.launch  waypoints_path_planner_pod.launch
msg/: SectionTrajectory.msg  SectionTrajectoryArray.msg  currentpodposewithtrajectoryln.msg  nogozoneinfo.msg  nogozoneinfoarray.msg  podbaselinepointsarray.msg  routeinfo.msg  routeinfoarray.msg  waypointinfo.msg  waypointinfoarray.msg  waypointsfilepath.msg
resources/: resources.yaml
routes/: MK.yaml  UDL_Routes.yaml  test1.yaml  test2.yaml  test3.yaml
rviz/: waypoints_path_planner.rviz
rviz/rviz/: waypoints_path_planner.rviz
src/: main.cpp  navigator_interactive_waypoint.cpp  status_monitoring_panel.cpp  visualization_manager.cpp  waypoints_path_planner.cpp  waypoints_path_planner.cpp.bak
srv/: alignWaypoints.srv  alternativeRoute.srv  startNavigation.srv
waypoints/RightLane/: rightlane.yaml
